<resources>
    <string name="app_name">RemoteView</string>
    <string name="system_notification">System notification</string>
    <string name="custom_notification">Custom notification</string>
    <string name="preference_switch_wifi_title">Wifi</string>
    <string name="preference_switch_wifi_on">wifi on</string>
    <string name="preference_switch_wifi_off">wifi off</string>
    <string name="preference_switch_bluetooth_title">Bluetooth</string>
    <string name="preference_switch_bluetooth_on">Bluetooth on</string>
    <string name="preference_switch_bluetooth_off">Bluetooth off</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
