<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
        android:key="switch_system"
        android:summary="blank fragment"
        android:title="@string/app_name">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.android.settings.wifi.WifiSettings"
            android:targetPackage="com.android.settings" />
    </PreferenceScreen>

    <SwitchPreference
        android:defaultValue="false"
        android:key="switch_wifi"
        android:summaryOff="@string/preference_switch_wifi_off"
        android:summaryOn="@string/preference_switch_wifi_on"
        android:title="@string/preference_switch_wifi_title" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="switch_bluetooth"
        android:summaryOff="@string/preference_switch_bluetooth_off"
        android:summaryOn="@string/preference_switch_bluetooth_on"
        android:title="@string/preference_switch_bluetooth_title" />

    <PreferenceScreen
        android:key="switch_system"
        android:summary="blank fragment"
        android:title="@string/app_name"
        android:fragment="com.android.remoteview.BlankFragment">
    </PreferenceScreen>

</PreferenceScreen>